frontend/dev/alphintra-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alphintra-ingress
  annotations:
    networking.gke.io/managed-certificates: alphintra-certificate
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: alphintra.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-app-service
            port:
              number: 3000
  - host: www.alphintra.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-app-service
            port:
              number: 3000
